Closed
Bug 1475707
Opened 7 years ago
Closed 7 years ago
[Mac] Flash sandbox on Nightly/Beta causes OS X 10.9 file upload dialog Flash plugin crash
Categories
(Core :: Security: Process Sandboxing, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox-esr60 | --- | unaffected |
firefox61 | --- | disabled |
firefox62 | --- | verified |
firefox63 | --- | verified |
People
(Reporter: haik, Assigned: haik)
References
Details
(Keywords: regression)
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
Alex_Gaynor
:
review+
ritu
:
approval-mozilla-beta+
|
Details |
On OS X 10.9, with the latest Nightly which has the Mac Flash sandbox enabled, attempting to upload a file using a demo uploader[1] results in the Flash plugin crashing.
This will also affect Beta builds that have Flash sandbox level set to 1 or above via pref "dom.ipc.plugins.sandbox-level.flash". Some early builds of Beta have the Flash sandbox on by default.
Release builds are not affected.
Workaround:
In about:config, set the preference "dom.ipc.plugins.sandbox-level.flash" to 0 and restart the browser. If the pref is not present, the sandbox is not enabled.
1. http://www.tinywebgallery.com/en/tfu/web_demo1.php
Assignee | ||
Updated•7 years ago
|
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Updated•7 years ago
|
status-firefox62:
--- → affected
Updated•7 years ago
|
Keywords: regression
Comment 3•7 years ago
|
||
mozreview-review |
Comment on attachment 8992104 [details]
Bug 1475707 - [Mac] Flash sandbox on Nightly/Beta causes OS X 10.9 file upload dialog Flash plugin crash
https://reviewboard.mozilla.org/r/256996/#review263996
Attachment #8992104 -
Flags: review?(agaynor) → review+
Comment hidden (mozreview-request) |
Pushed by haftandilian@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/519aebccf07d
[Mac] Flash sandbox on Nightly/Beta causes OS X 10.9 file upload dialog Flash plugin crash r=Alex_Gaynor
Comment 6•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Updated•7 years ago
|
status-firefox61:
--- → disabled
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Comment 7•7 years ago
|
||
Please request Beta approval on this when you get a chance.
Flags: needinfo?(haftandilian)
Assignee | ||
Comment 8•7 years ago
|
||
I've requested uplift of bug 1474375 and listed this bug as a dependency.
Flags: needinfo?(haftandilian)
Comment 9•7 years ago
|
||
Comment on attachment 8992104 [details]
Bug 1475707 - [Mac] Flash sandbox on Nightly/Beta causes OS X 10.9 file upload dialog Flash plugin crash
Approval Request Comment
[Feature/Bug causing the regression]: required for bug 1474375
[User impact if declined]:
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]:
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]:
[Why is the change risky/not risky?]:
[String changes made/needed]:
Attachment #8992104 -
Flags: approval-mozilla-beta?
Comment 10•7 years ago
|
||
STR in comment 0. I'd like us to verify the fixes in nightly for Bug 1475722, Bug 1471977, and Bug 1475707 before we uplift for beta. (Hopefully for beta 13 next Monday)
Flags: qe-verify+
Comment 11•7 years ago
|
||
I managed to reproduce the issue using an older version of Nightly (2018-07-13) on Mac OS 10.9. As soon as the dialog box was displayed the Flash plugin crashed.
I retested using the latest Nightly 63.0a1 and the bug is not reproducing anymore.
Flags: qe-verify+
Comment on attachment 8992104 [details]
Bug 1475707 - [Mac] Flash sandbox on Nightly/Beta causes OS X 10.9 file upload dialog Flash plugin crash
Fix was verified on Nightly63, Beta62+
Attachment #8992104 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 13•7 years ago
|
||
bugherder uplift |
Readding qe-verify+ to make sure beta 14 is also verified.
Flags: qe-verify+
Comment 15•7 years ago
|
||
I verified the fix on beta 62.0b14 using Mac OS 10.9 and the plugin is not crashing anymore.
You need to log in
before you can comment on or make changes to this bug.
Description
•